[package]
name = "RendezvousHash"
version = "0.1.0"
description = "An implementation of Rendezvous hashing algorithm"
homepage = "https://github.com/swy870520/RendezvousHash"
repository = "https://github.com/swy870520/RendezvousHash"
readme = "README.md"
keywords = ["distributed", "hash"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "swy870520/RendezvousHash"}
codecov = {repository = "swy870520/RendezvousHash"}

[dependencies]

[dev-dependencies]
clap = "2"
